tests/ui/associated-types/dont-suggest-cyclic-constraint.stderr
error[E0308]: mismatched types
  --> $DIR/dont-suggest-cyclic-constraint.rs:7:35
   |
LL |     debug_assert_eq!(iter.next(), Some(value));
   |                                   ^^^^^^^^^^^ expected `Option<<I as Iterator>::Item>`, found `Option<&<I as Iterator>::Item>`
   |
   = note: expected enum `Option<_>`
              found enum `Option<&_>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
